--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=8080
 MONGODB_CNN=mongodb+srv://olrodriguez1195:lUfAedikMUl6DXr4@node-coffe-cluster.hhmqocx.mongodb.net/coffeDB
+SK=TH!51SMy9ub1Ck3Y@1195
